@@ -44,6 +44,7 @@ xml_in_files = \
 	electric.xml.in \
 	enumerate.xml.in \
 	erase_clic.xml.in \
+	erase_doubleclick.xml.in \
 	erase.xml.in \
 	experience.xml.in \
 	experimental.xml.in \
