@@ -81,6 +81,7 @@ boards/drawnumber.xml.in
 boards/electric.xml.in
 boards/enumerate.xml.in
 boards/erase.xml.in
+boards/erase_doubleclick.xml.in
 boards/erase_clic.xml.in
 boards/experience.xml.in
 boards/experimental.xml.in
