@@ -1,3 +1,11 @@
+2008-04-30  Bruno Coudoin,,,  <bruno.coudoin@free.fr>
+
+	Reintroduced the double click erase based activity.
+
+	* boards/Makefile.am:
+	* boards/erase_clic.xml.in:
+	* src/boards/erase.c: (start_board), (item_event):
+
 2008-04-28  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	New activity to learn the doubleclick in an intuite fashion.
